--- a/CSS/Portfolio-ps.scss
+++ b/CSS/Portfolio-ps.scss
@@ -67,7 +67,7 @@ section#Portfolio-ps{
                 // width: 600px;
                 width: 100%;
                 min-height: 100vh;
-                background-color: #A74B4B;
+                background-color: #8EBCD2;
                 padding: 100px;
                 margin-top: -100px;
                 // position: absolute;
@@ -81,7 +81,7 @@ section#Portfolio-ps{
             .line{
                 width: 3px;
                 height: 450px;
-                background-color: yellow;
+                background-color: #F4DBA3;
                 
                 z-index: 1;
             }
@@ -116,7 +116,7 @@ section#Portfolio-ps{
                     width: 100%;
                     // min-height: 500px;
                     min-height: 70vh;
-                    background-color: #A74B4B;
+                    background-color: #8EBCD2;
                     padding:50px;
                     margin: auto;
                     // justify-content: center;;
@@ -169,7 +169,7 @@ section#Portfolio-ps{
                 // min-height: 500px;
                 min-height: 100vh;
                 // height: 1000px;
-                background-color: #A74B4B;
+                background-color: #8EBCD2;
                 padding:100px;
                 // margin-top: -100px;
                 
@@ -250,7 +250,7 @@ section#Portfolio-ps{
                 // width: 600px;
                 width: 100%;
                 min-height:100vh;
-                background-color: #A74B4B;
+                background-color: #8EBCD2;
                 padding: 100px;
                 // margin-top: -180px;
 
@@ -271,7 +271,7 @@ section#Portfolio-ps{
                 #PS-text3{
                     width: 100%;
                     min-height: 70vh;
-                    background-color: #A74B4B;
+                    background-color: #8EBCD2;
                     
                     margin: auto;
                    position: relative;
