--- a/CSS/Portfolio-web.scss
+++ b/CSS/Portfolio-web.scss
@@ -3,7 +3,7 @@ section#Portfolio-web{
     // background-color: rgb(155, 136, 136);
     .bgc-web{
         // margin-top: 200px;
-        background-color: rgb(155, 136, 136);
+        background-color: #84C6C3;
         padding-bottom: 100px;
         h2{
             width: 100%;
@@ -17,7 +17,7 @@ section#Portfolio-web{
         span{
             width: 100%;
             color: rgb(62, 56, 56);
-            font-size: 26px;
+            font-size: 20px;
             padding: 0px 50px 30px 150px;
             margin: auto ;
             margin-top: -80px;
@@ -34,7 +34,7 @@ section#Portfolio-web{
             }
             span{
                 color: rgb(62, 56, 56);
-                font-size: 20px;
+                font-size: 16px;
                 padding: 0px 0px 30px 0px;
                 text-align: center;
                 margin: auto ;
