--- a/style/Portfolio-ai.css
+++ b/style/Portfolio-ai.css
@@ -1,1 +1,83 @@
-/* No CSS *//*# sourceMappingURL=Portfolio-ai.css.map */
+section#Portfolio-AI {
+  height: 100vh;
+  background-color: #e9b7b7;
+}
+
+section#Portfolio-AI .bgc-ai {
+  background-color: #e9b7b7;
+  padding-bottom: 100px;
+}
+
+section#Portfolio-AI .bgc-ai h2 {
+  width: 100%;
+  padding: 10px 0px 30px 200px;
+  font-size: 64px;
+  font-weight: bolder;
+  margin-top: 100px;
+}
+
+@media (max-width: 992px) {
+  section#Portfolio-AI .bgc-ai h2 {
+    width: 100%;
+    text-align: center;
+    font-size: 40px;
+    padding: 90px 0px 0px 0px;
+    margin: auto;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  section#Portfolio-AI .bgc-ai h2 {
+    font-size: 36px;
+    padding: 80px 0px 0px 0px;
+    margin: auto;
+    margin-bottom: 30px;
+  }
+}
+
+section#Portfolio-AI .swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+section#Portfolio-AI .swiper-container .swiper-pagination-bullet-active {
+  background-color: #1c7414;
+  background-color: #f14775;
+}
+
+section#Portfolio-AI .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #504d4d;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  margin: auto;
+}
+
+section#Portfolio-AI .swiper-slide img {
+  width: 100%;
+}
+
+@media (max-width: 576px) {
+  section#Portfolio-AI {
+    padding-bottom: 0px;
+  }
+  section#Portfolio-AI .bgc-ai {
+    margin-top: 0px;
+    background-color: #e9b7b7;
+    padding-bottom: 50px;
+  }
+}
+/*# sourceMappingURL=Portfolio-ai.css.map */
