--- a/style/Portfolio-web.css
+++ b/style/Portfolio-web.css
@@ -1,5 +1,5 @@
 section#Portfolio-web .bgc-web {
-  background-color: #9b8888;
+  background-color: #84C6C3;
   padding-bottom: 100px;
 }
 
@@ -14,7 +14,7 @@ section#Portfolio-web .bgc-web h2 {
 section#Portfolio-web .bgc-web span {
   width: 100%;
   color: #3e3838;
-  font-size: 26px;
+  font-size: 20px;
   padding: 0px 50px 30px 150px;
   margin: auto;
   margin-top: -80px;
@@ -31,7 +31,7 @@ section#Portfolio-web .bgc-web span {
   }
   section#Portfolio-web .bgc-web span {
     color: #3e3838;
-    font-size: 20px;
+    font-size: 16px;
     padding: 0px 0px 30px 0px;
     text-align: center;
     margin: auto;
