--- a/CSS/layout.scss
+++ b/CSS/layout.scss
@@ -17,147 +17,251 @@ html{
 
 
 .navbar {
+    // display: none;
     padding: 0 8px 0 0;
     position: fixed ;
     z-index: 9999999;
     width: 100%;
-    
+    max-height: 15%;
 }
 
     
 //---------  漢堡條----------
-    #toggle {
-        width: 28px;
-        height: 30px;
-        margin: 10px auto;
-        float: right;
-        margin-right: 15px;
-        display: none;
-      }
-      
-    #toggle div {
-        width: 100%;
-        height: 5px;
-        background: white;
-        margin: 4px auto;
-        transition: all 0.3s;
-        backface-visibility: hidden;
-    }
-      
-    #toggle.on .one {
-        transform: rotate(45deg) translate(5px, 5px);
-    }
-      
-    #toggle.on .two {
-    opacity: 0;
-    }
-      
-    #toggle.on .three {
-        transform: rotate(-45deg) translate(7px, -8px);
+#toggle {
+    width: 28px;
+    height: 30px;
+    margin: 10px auto;
+    float: right;
+    margin-right: 15px;
+    display: none;
     }
     
+#toggle div {
+    width: 100%;
+    height: 5px;
+    background: white;
+    margin: 4px auto;
+    transition: all 0.3s;
+    backface-visibility: hidden;
+}
+    
+#toggle.on .one {
+    transform: rotate(45deg) translate(5px, 5px);
+}
+    
+#toggle.on .two {
+opacity: 0;
+}
+    
+#toggle.on .three {
+    transform: rotate(-45deg) translate(7px, -8px);
+}
 
 
-    @media(max-width:992px) {
-        #toggle {
-            display: block;
-        }
+
+@media(max-width:992px) {
+    .navbar {
         
-        .navbar-nav{
-        
-            height: 100vh;;
-        }
+        max-height: none;
     }
-
-   
-
-    .navbar-nav a {
-        font-size: 24px;
+    #toggle {
+        display: block;
     }
-
-    #navbarNav.show{
-        height: 100vh;
-        transition: .2s;
-        -webkit-overflow-scrolling:touch;
-    }
-
-    // #navbarNav.show .navbar-nav{
-    //     height: 100vh;
-    //     transition: .2s;
-    //     -webkit-overflow-scrolling:touch;
-    // }
     
     .navbar-nav{
+    
+        height: 100vh;;
+    }
+}
+
+
+
+.navbar-nav a {
+    font-size: 24px;
+}
+
+#navbarNav.show{
+    height: 100vh;
+    transition: .2s;
+    -webkit-overflow-scrolling:touch;
+}
+
+// #navbarNav.show .navbar-nav{
+//     height: 100vh;
+//     transition: .2s;
+//     -webkit-overflow-scrolling:touch;
+// }
+
+.navbar-nav{
+    
+    margin: auto;
+    li.nav-item{
+    margin: 0 25px 0px 25px;
+    
+        a{
+        font-size: 24px;
+        color: white;
         
-        margin: auto;
-        li.nav-item{
-        margin: 0 25px 0px 25px;
         
-            a{
-            font-size: 24px;
+
+            p{
             color: white;
+            margin-bottom: 0px;
+            padding-bottom: 10px;
+
+
+            margin: 0 0 0 auto;
+            font-size: 24px;
+            text-decoration: none;
+            position: relative;
             
-            
-
-                p{
-                color: white;
-                margin-bottom: 0px;
-                padding-bottom: 10px;
-
-
-                margin: 0 0 0 auto;
-                font-size: 24px;
-                text-decoration: none;
-                position: relative;
-                
-                 border-bottom: solid 2px rgb(255, 191, 14);   
-                };
-                p:hover{
-                    color:  rgb(255, 191, 14);
-                    border-bottom:none; 
-                }
-
-                p:after {
-                    content: '';
-                    position: absolute;
-                    bottom: -2px;
-                    left: 0%;
-                    width: 0;
-                    border-bottom: 2px solid rgb(255, 191, 14);
-                    transition: 1s;
-                    
-                }
-                
-                p:hover:after {
-                    width: 100%;
-                }
+                border-bottom: solid 2px rgb(255, 191, 14);   
+            };
+            p:hover{
+                color:  rgb(255, 191, 14);
+                border-bottom:none; 
             }
 
-           
-            // a:hover{
-            // color: yellow;
-            
-            // // border-bottom: solid 1px yellow;
-            // }
-
-           
-            //     // border-bottom: solid 1px yellow;
-            //     padding-bottom: 10px;
+            p:after {
+                content: '';
+                position: absolute;
+                bottom: -2px;
+                left: 0%;
+                width: 0;
+                border-bottom: 2px solid rgb(255, 191, 14);
+                transition: 1s;
                 
-            // }
-
-            // #navbarNav a p {
-            //     margin: 0 0 0 auto;
-            //     font-size: 24px;
-            //     text-decoration: none;
-            //     position: relative;
-            //     color: rgb(255, 191, 14);
-            // }
+            }
             
+            p:hover:after {
+                width: 100%;
+            }
 
+
+           
+        }
+
+        
+
+        
+        // a:hover{
+        // color: yellow;
+        
+        // // border-bottom: solid 1px yellow;
+        // }
+
+        
+        //     // border-bottom: solid 1px yellow;
+        //     padding-bottom: 10px;
             
-    
-        }    
+        // }
+
+        // #navbarNav a p {
+        //     margin: 0 0 0 auto;
+        //     font-size: 24px;
+        //     text-decoration: none;
+        //     position: relative;
+        //     color: rgb(255, 191, 14);
+        // }
+        
+
+        
+
+    }   
+    // 導覽列子列
+    .here1{
+        display: none;
+        
+
+       
+
     }
+
+    .touch:hover{
+        // padding: 0px;
+        // margin: 0;
+        .here1{
+            display: block;
+            position: fixed;
+            border-radius: 5px;;
+            padding: 0px;
+            margin-left: -10px;
+            background-color: rgb(27, 25, 25);
+            .dropdown-item:hover{
+                color: rgb(255, 191, 14);
+                
+                // width: 100%;
+                background-color: rgb(106, 106, 103);
+                // padding: 0px;
+                // margin: 0;
+            }
+
+        }
+        
+        
+    } 
+    @media(max-width:992px) {
+        .here1{
+            display: block;
+            margin-left: -10px;
+            padding: 0px;
+    
+           
+    
+        }
+        .touch:hover{
+            .here1{
+            display: block;
+            background-color: rgba(0, 0, 0, 0);
+            border-radius: 10%;;
+            width: 100%;
+            }
+            .dropdown-item:hover{
+                margin-left: 10px;
+                width: 90%;
+                color: rgb(255, 191, 14);
+
+             
+            }
+           
+        }
+        
+    }
+
+
+}
+
+
+// Top 鍵
+.top {
+    display: none;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    /* background-color: rgba(184, 135, 11, 0.733); */
+    background-color:rgba(100, 100, 100, 0.438);
+    position: fixed;
+    bottom: 20px;
+    right: 40px;
+
+    text-align: center;
+    line-height: 60px;
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+
+}
+
+.top a {
+    text-decoration: none;
+}
+
+.top:hover{
+    background-color: rgba(255, 245, 238, 0.815);
+    transition: 0.3s;
+    color: rgba(250, 26, 26, 0.849);
+    font-weight: 900;
+    font-size: 40px;
+}
+
  
 
