--- a/style/layout.css
+++ b/style/layout.css
@@ -138,7 +138,7 @@ html {
   border-radius: 5px;
   padding: 0px;
   margin-left: -10px;
-  background-color: #1b1919;
+  background-color: #343a40;
 }
 
 .navbar-nav .touch:hover .here1 .dropdown-item:hover {
