--- a/CSS/layout-portfolio.scss
+++ b/CSS/layout-portfolio.scss
@@ -17,7 +17,7 @@ html{
 
 
 .navbar {
-    display: none;
+    display: block;
     padding: 0 8px 0 0;
     position: fixed ;
     z-index: 9999999;
