--- a/CSS/Portfolio-ai.scss
+++ b/CSS/Portfolio-ai.scss
@@ -7,30 +7,31 @@ section#Portfolio-AI{
         // background-color: rgb(247, 133, 133);
         background-color: rgb(233, 183, 183);
         padding-bottom: 100px;
-        h2{
+        h1{
             width: 100%;
             padding: 10px 0px 30px 200px;
             font-size: 64px;
             font-weight: bolder;
             margin-top: 100px;
-            // text-shadow: -1px -1px 0px rgb(91, 71, 71),
+            text-shadow: 6px 5px 3px rgb(233, 134, 134),
             // 3px 3px 0px rgb(194, 176, 176),
             // 6px 6px 0px rgb(91, 71, 71);
 
         }
         @media (max-width:992px) {
-            h2{
+            h1{
                 width: 100%;
                 text-align: center;
                 font-size: 40px;
                 padding: 90px 0px 0px 0px;
                 margin: auto ;
                 margin-bottom: 30px;
+                text-shadow: 3px 2px 3px rgb(233, 134, 134),
             }
         }
 
         @media (max-width:576px) {
-            h2{
+            h1{
                 // width: 100%;
                 font-size: 36px;
                 padding: 80px 0px 0px 0px;
@@ -61,9 +62,9 @@ section#Portfolio-AI{
     }
    
     .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: rgb(80, 77, 77);
+        // text-align: center;
+        // font-size: 18px;
+        // background: rgb(211, 199, 199);
 
         /* Center slide text vertically */
         display: -webkit-box;
@@ -79,10 +80,15 @@ section#Portfolio-AI{
         -webkit-align-items: center;
         align-items: center;
         margin: auto;
-        
+        padding: 5px;
+      
+        border: solid 3px #d58787;
+
+        // text-shadow: 300px 200px 3px rgb(167, 120, 120),
 
         img{
             width: 100%;
+            
             // border: solid 30px rgb(247, 133, 133);
         }
     }
