--- a/CSS/Portfolio-web.scss
+++ b/CSS/Portfolio-web.scss
@@ -4,19 +4,19 @@ section#Portfolio-web{
     .bgc-web{
         // margin-top: 200px;
         background-color: #84C6C3;
-        padding-bottom: 100px;
-        h2{
+        padding-bottom: 0px;
+        h1{
             width: 100%;
             padding: 100px 0px 100px 150px;
             font-size: 64px;
             font-weight: bolder;
             margin: auto ;
-            
+            text-shadow: 6px 5px 3px #3fa5a1;
 
         }
         span{
             width: 100%;
-            color: rgb(62, 56, 56);
+            color: rgb(75, 68, 68);
             font-size: 20px;
             padding: 0px 50px 30px 150px;
             margin: auto ;
@@ -24,13 +24,14 @@ section#Portfolio-web{
             
         }
         @media (max-width:992px) {
-            h2{
+            h1{
                 width: 100%;
                 text-align: center;
                 font-size: 40px;
-                padding: 50px 0px 0px 0px;
+                padding: 70px 0px 0px 0px;
                 margin: auto ;
                 margin-bottom: 30px;
+                text-shadow: 3px 2px 3px #3fa5a1,
             }
             span{
                 color: rgb(62, 56, 56);
@@ -43,10 +44,10 @@ section#Portfolio-web{
         }
 
         @media (max-width:576px) {
-            h2{
+            h1{
                 // width: 100%;
                 font-size: 36px;
-                padding: 50px 0px 0px 0px;
+                padding: 70px 0px 0px 0px;
                 margin: auto ;
                 margin-bottom: 30px;
             }
@@ -66,13 +67,16 @@ section#Portfolio-web{
         .pic{
         width: 100%;
         height: 50vh;
+        min-height: 512px;
         }
         .webpic1{
             background-image: url(../img/web-pic1.jpg);
             background-size: cover;
             background-repeat: no-repeat;
-            
-            
+            border-left:solid 5px  #a0dae2;
+            border-top:solid 5px  #a0dae2;
+            border-right:solid 8px  #568a91;
+            border-bottom:solid 8px  #568a91;
         }
 
         .text{
@@ -83,7 +87,7 @@ section#Portfolio-web{
                 // color: white;
                 // color: rgb(255, 217, 0);
                 color: rgb(42, 42, 42);
-                padding: 0px 0px 0px 50px;
+                padding: 30px 0px 0px 50px;
                 font-size: 36px;
                 font-weight:600;
                 // text-indent: -9999px
@@ -109,7 +113,7 @@ section#Portfolio-web{
             .horseQR{
                 background-image: url(../img/horse-QRcode.png);
                 background-repeat: no-repeat;
-                background-size: cover;
+                background-size: contain;
                 
             }
             
@@ -137,7 +141,8 @@ section#Portfolio-web{
             }
             .QRcode{
                 padding: 0px 50px 0px 0px ;
-                  
+                display: flex;
+                justify-content: center;
                 text-align: end;
            
             }
@@ -145,6 +150,7 @@ section#Portfolio-web{
 
         }
         @media (max-width:576px) {
+            
             .text{
                 p{
                     
@@ -165,7 +171,7 @@ section#Portfolio-web{
     .row{
         padding: 0px 80px;
         .pic{
-        width: 100%;
+        // width: 100%;
         // height: 50vh;
         }
         .webpic2{
@@ -173,7 +179,11 @@ section#Portfolio-web{
             background-size: cover;
             background-repeat: repeat;
             background-position: top center;
-            margin-top: 50px;
+            margin-top: 100px;
+            border-left:solid 5px  #a0dae2;
+            border-top:solid 5px  #a0dae2;
+            border-right:solid 8px  #568a91;
+            border-bottom:solid 8px  #568a91;
         }
 
         .text{
@@ -189,18 +199,18 @@ section#Portfolio-web{
                 width: 100%;
                 text-align: end;
            
-                .pic{
-                    width: 195px;
-                    height: 195px;
+                // .pic{
+                //     width: 195px;
+                //     height: 195px;
                    
-                }
+                // }
 
-                .teamQR{
-                    background-image: url(../img/team-QRcode.png);
-                    background-repeat: no-repeat;
-                    background-size: cover;
+                // .teamQR{
+                //     background-image: url(../img/team-QRcode.png);
+                //     background-repeat: no-repeat;
+                //     background-size: cover;
                     
-                }
+                // }
             }
             
         }
