--- a/style/Portfolio-ai.css
+++ b/style/Portfolio-ai.css
@@ -8,27 +8,29 @@ section#Portfolio-AI .bgc-ai {
   padding-bottom: 100px;
 }
 
-section#Portfolio-AI .bgc-ai h2 {
+section#Portfolio-AI .bgc-ai h1 {
   width: 100%;
   padding: 10px 0px 30px 200px;
   font-size: 64px;
   font-weight: bolder;
   margin-top: 100px;
+  text-shadow: 6px 5px 3px #e98686;
 }
 
 @media (max-width: 992px) {
-  section#Portfolio-AI .bgc-ai h2 {
+  section#Portfolio-AI .bgc-ai h1 {
     width: 100%;
     text-align: center;
     font-size: 40px;
     padding: 90px 0px 0px 0px;
     margin: auto;
     margin-bottom: 30px;
+    text-shadow: 3px 2px 3px #e98686;
   }
 }
 
 @media (max-width: 576px) {
-  section#Portfolio-AI .bgc-ai h2 {
+  section#Portfolio-AI .bgc-ai h1 {
     font-size: 36px;
     padding: 80px 0px 0px 0px;
     margin: auto;
@@ -47,9 +49,6 @@ section#Portfolio-AI .swiper-container .swiper-pagination-bullet-active {
 }
 
 section#Portfolio-AI .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #504d4d;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -64,6 +63,8 @@ section#Portfolio-AI .swiper-slide {
   -webkit-align-items: center;
   align-items: center;
   margin: auto;
+  padding: 5px;
+  border: solid 3px #d58787;
 }
 
 section#Portfolio-AI .swiper-slide img {
